added some styles

--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -109,6 +109,8 @@ body {
 header {
   width: 100%;
   overflow: hidden;
+  -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.19);
+          box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.19);
 }
 
 .nav {
@@ -310,7 +312,7 @@ header {
   text-align: center;
   font-size: 40px;
   font-weight: 800;
-  margin-bottom: 35px;
+  margin-bottom: 50px;
 }
 
 .second-section .second-section-container {
@@ -330,7 +332,7 @@ header {
   width: 100%;
   margin: 0 auto;
   text-align: center;
-  height: 300px;
+  height: 370px;
   overflow: hidden;
 }
 
@@ -356,7 +358,7 @@ header {
 
 .second-section .second-section-container p {
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 400;
   margin-top: 20px;
 }
 
@@ -369,7 +371,7 @@ header {
   font-weight: 600;
   text-decoration: none;
   color: #bE505F;
-  margin-top: 2rem;
+  margin-top: 1rem;
   border-radius: 1.6rem;
   text-align: center;
   margin-bottom: 50px;
@@ -394,7 +396,7 @@ header {
   overflow: hidden;
   background-color: #3E5377;
   padding: 100px 0 100px 0;
-  margin-top: 90px;
+  margin-top: 89px;
 }
 
 .botique-designer .botique-designer-container {
@@ -864,7 +866,7 @@ header {
 
 @media only screen and (max-width: 768px) {
   .botique-designer {
-    padding: 20px 0 20px 0;
+    padding: 20px 0 30px 0;
   }
   .botique-designer .botique-designer-container {
     padding-top: 25px;
@@ -1095,6 +1097,12 @@ header {
   .Seller-icon {
     -webkit-transform: translateY(15px);
             transform: translateY(15px);
+  }
+  .botique-designer {
+    text-align: center;
+  }
+  .second-section .second-section-container p {
+    font-size: 18px;
   }
 }
 
