added some styles

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -920,6 +920,9 @@
       .second-section .second-section-container p {
         font-size: 18px;
       }
+      .second-section .second-section-header {
+        margin-bottom: 10px;
+      }
     }
 
     @media only screen and (max-width:320px){
