--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -1104,6 +1104,9 @@ header {
   .second-section .second-section-container p {
     font-size: 18px;
   }
+  .second-section .second-section-header {
+    margin-bottom: 10px;
+  }
 }
 
 @media only screen and (max-width: 320px) {
