--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -339,6 +339,7 @@
                     color: white;
                     font-weight: 600;
                     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.19);
+                    transition: 0.4s all linear;
                     &:hover{
                       background-color: white;
                       color:#3E5377;
