--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -394,7 +394,7 @@ header {
 .botique-designer {
   width: 100%;
   overflow: hidden;
-  background-color: #3E5377;
+  background-color: #BE505F;
   padding: 100px 0 100px 0;
   margin-top: 89px;
 }
@@ -461,7 +461,7 @@ header {
 
 .botique-designer .botique-designer-container .botique-designer-container-textsection .register-here-button:hover {
   background-color: white;
-  color: #3E5377;
+  color: #BE505F;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
