--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -298,7 +298,7 @@
        .botique-designer{
            width:100%;
            overflow: hidden;
-           background-color: #3E5377;
+           background-color: #BE505F;
            padding:100px 0 100px 0;
            margin-top: 89px;
            .botique-designer-container{
@@ -342,7 +342,7 @@
                     transition: 0.4s all linear;
                     &:hover{
                       background-color: white;
-                      color:#3E5377;
+                      color:#BE505F;
                       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
                     }
                   }
