--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -363,7 +363,6 @@ header {
 }
 
 .second-section .register-here-button {
-  margin-top: 2rem;
   display: inline-block;
   padding: 5px 15px;
   border: 1px solid #bE505F;
@@ -372,7 +371,6 @@ header {
   text-decoration: none;
   color: #bE505F;
   margin-top: 1rem;
-  border-radius: 1.6rem;
   text-align: center;
   margin-bottom: 50px;
   -webkit-transition: 0.4s all linear;
@@ -387,6 +385,79 @@ header {
 .second-section .register-here-button:hover {
   background-color: #bE505F;
   color: white;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.sell-your-way {
+  width: 100%;
+  padding: 50px 0 50px 0;
+}
+
+.sell-your-way .sell-your-way-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 1100px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.sell-your-way .sell-your-way-container .sell-your-way-container-imagesection {
+  width: 50%;
+  height: 350px;
+  overflow: hidden;
+}
+
+.sell-your-way .sell-your-way-container .sell-your-way-container-imagesection img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.sell-your-way .sell-your-way-container .sell-your-way-container-textsection {
+  width: 50%;
+  padding-left: 50px;
+}
+
+.sell-your-way .sell-your-way-container .sell-your-way-container-textsection h1 {
+  font-size: 40px;
+  font-weight: 800;
+}
+
+.sell-your-way .sell-your-way-container .sell-your-way-container-textsection p {
+  font-size: 22px;
+  font-weight: 400;
+  margin-top: 30px;
+}
+
+.sell-your-way .sell-your-way-container .sell-your-way-container-textsection .sell-your-way-button a {
+  display: inline-block;
+  padding: 5px 15px;
+  border: 1px solid #bE505F;
+  border-radius: 1.6rem;
+  font-weight: 600;
+  text-decoration: none;
+  color: #bE505F;
+  margin-top: 20px;
+  -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.19);
+          box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.19);
+  -webkit-transition: 0.4s all linear;
+  transition: 0.4s all linear;
+}
+
+.sell-your-way .sell-your-way-container .sell-your-way-container-textsection .sell-your-way-button a:hover {
+  color: white;
+  background-color: #bE505F;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -424,6 +495,7 @@ header {
 
 .botique-designer .botique-designer-container .botique-designer-container-textsection {
   width: 50%;
+  padding-right: 10px;
 }
 
 .botique-designer .botique-designer-container .botique-designer-container-textsection .botique-designer-header {
@@ -922,6 +994,9 @@ header {
   .footer-secondsection-image img {
     margin-left: 140px !important;
   }
+  .sell-your-way .sell-your-way-container .sell-your-way-container-textsection {
+    padding-left: 30px;
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -1108,6 +1183,31 @@ header {
   }
   .second-section .second-section-header {
     margin-bottom: 10px;
+  }
+  .sell-your-way {
+    padding: 0px 0 50px 0;
+  }
+  .sell-your-way .sell-your-way-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .sell-your-way .sell-your-way-container .sell-your-way-container-imagesection {
+    width: 100%;
+  }
+  .sell-your-way .sell-your-way-container .sell-your-way-container-textsection {
+    width: 100%;
+    padding-left: 0px;
+  }
+  .sell-your-way .sell-your-way-container .sell-your-way-container-textsection h1 {
+    font-size: 30px;
+  }
+  .sell-your-way .sell-your-way-container .sell-your-way-container-textsection p {
+    font-size: 17px;
+  }
+  .sell-your-way .sell-your-way-container {
+    text-align: center;
   }
 }
 
