--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -268,7 +268,6 @@
           
          }
          .register-here-button{
-          margin-top: 2rem;
           display: inline-block;
           padding: 5px 15px;
           border: 1px solid #bE505F;
@@ -277,7 +276,6 @@
           text-decoration: none;
           color: #bE505F;
           margin-top: 1rem;
-          border-radius: 1.6rem;
           text-align: center;
           margin-bottom: 50px;
           transition: 0.4s all linear;
@@ -293,6 +291,64 @@
        }
 
       // section second css end
+
+       // new section start
+         .sell-your-way{
+              width:100%;
+              padding: 50px 0 50px 0;
+              .sell-your-way-container{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                max-width: 1100px;
+                width:90%;
+                margin:0 auto;
+                .sell-your-way-container-imagesection{
+                  width:50%;
+                  height:350px;
+                  overflow: hidden;
+                  img{
+                      width:100%;
+                      height:100%;
+                      object-fit: contain;
+                      object-position: center;
+                  }
+                }
+                .sell-your-way-container-textsection{
+                  width:50%;
+                  padding-left: 50px;
+                  h1{
+                    font-size: 40px;
+                    font-weight: 800;
+                  }
+                  p{
+                    font-size: 22px;
+                    font-weight: 400;
+                    margin-top: 30px;
+                  }
+                  .sell-your-way-button a{
+                    display: inline-block;
+                    padding: 5px 15px;
+                    border: 1px solid #bE505F;
+                    border-radius: 1.6rem;
+                    font-weight: 600;
+                    text-decoration: none;
+                    color: #bE505F;
+                    margin-top: 20px;
+                    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.19);
+                    transition: 0.4s all linear;
+                    &:hover{
+                      color:white;
+                      background-color:#bE505F;
+                      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                    }
+                  }
+                }
+               
+              }
+         }
+
+       // new section end
 
     // botique-designer css start
        .botique-designer{
@@ -314,6 +370,7 @@
                align-items: center;
                .botique-designer-container-textsection{
                    width:50%;
+                   padding-right:10px;
                   .botique-designer-header{
                       font-size: 3rem;
                       color: white;
@@ -744,7 +801,9 @@
       .footer-secondsection-image img {
         margin-left: 140px !important;
       }
-     
+      .sell-your-way .sell-your-way-container .sell-your-way-container-textsection {
+        padding-left: 30px;
+      }
     }
     @media only screen and (max-width:480px){
 
@@ -924,6 +983,28 @@
       .second-section .second-section-header {
         margin-bottom: 10px;
       }
+      .sell-your-way {
+        padding: 0px 0 50px 0;
+    }
+      .sell-your-way .sell-your-way-container {
+        flex-direction: column;
+      }
+      .sell-your-way .sell-your-way-container .sell-your-way-container-imagesection {
+        width: 100%;
+      }
+      .sell-your-way .sell-your-way-container .sell-your-way-container-textsection {
+        width: 100%;
+        padding-left: 0px;
+       }
+       .sell-your-way .sell-your-way-container .sell-your-way-container-textsection h1 {
+        font-size: 30px;
+       }
+       .sell-your-way .sell-your-way-container .sell-your-way-container-textsection p {
+        font-size: 17px;
+       }
+       .sell-your-way .sell-your-way-container {
+         text-align: center;
+       }
     }
 
     @media only screen and (max-width:320px){
