added some styles

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -296,6 +296,7 @@
          .sell-your-way{
               width:100%;
               padding: 50px 0 50px 0;
+              background-color: white;
               .sell-your-way-container{
                 display: flex;
                 justify-content: center;
