--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -392,6 +392,7 @@ header {
 .sell-your-way {
   width: 100%;
   padding: 50px 0 50px 0;
+  background-color: white;
 }
 
 .sell-your-way .sell-your-way-container {
