--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -286,7 +286,7 @@
          .register-here-button:hover{
           background-color:#bE505F;
           color: white;
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+          box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.9), 0 0px 0px 0px rgba(0, 0, 0, 0.19);
         }
        }
 
@@ -372,6 +372,7 @@
                .botique-designer-container-textsection{
                    width:50%;
                    padding-right:10px;
+                   padding-bottom: 10px;
                   .botique-designer-header{
                       font-size: 3rem;
                       color: white;
@@ -401,7 +402,7 @@
                     &:hover{
                       background-color: white;
                       color:#BE505F;
-                      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.9), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
                     }
                   }
                }
